--- a/config.json
+++ b/config.json
@@ -18,13 +18,13 @@
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
     [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "domx", "norm", "norm", "norm", "norm", "norm", "domx", "norm" ],
+    [ "norm", "wall", "norm", "norm", "norm", "norm", "norm", "wall", "norm" ],
     [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
     [ "norm", "norm", "norm", "nest", "nest", "nest", "norm", "norm", "norm" ],
     [ "norm", "norm", "norm", "nest", "domM", "nest", "norm", "norm", "norm" ],
     [ "norm", "norm", "norm", "nest", "nest", "nest", "norm", "norm", "norm" ],
     [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "domx", "norm", "norm", "norm", "norm", "norm", "domx", "norm" ],
+    [ "norm", "wall", "norm", "norm", "norm", "norm", "norm", "wall", "norm" ],
     [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ]
   ],
   "X_GRID": 9,
@@ -64,6 +64,6 @@
   "MIN_SPEED": 0.001,
   "FOOD_AMOUNT": 0.4, 
   "SKILL_BOOST": 5,
-  "BOTS": 3,
+  "BOTS": 7,
   "GLASS_HEALTH_FACTOR": 2
 }
